[gd_scene load_steps=7 format=3 uid="uid://dn4m4oe115sqt"]

[ext_resource type="Texture2D" uid="uid://b0ci0rh301vrk" path="res://Assets/items/PNG/Transperent/Icon41.png" id="1_j2rnm"]
[ext_resource type="Script" path="res://Scripts/items.gd" id="1_ju2ul"]
[ext_resource type="Texture2D" uid="uid://spt81cqdo8eg" path="res://Assets/items/PNG/Transperent/Icon40.png" id="2_1t8kp"]
[ext_resource type="Texture2D" uid="uid://dj004i78xps3u" path="res://Assets/items/PNG/Transperent/Icon17.png" id="3_sphr1"]
[ext_resource type="Texture2D" uid="uid://c22pkdifx5tgl" path="res://Assets/items/PNG/Transperent/Icon16.png" id="4_vpstm"]
[ext_resource type="Texture2D" uid="uid://n8eklt8s2dnj" path="res://Assets/items/PNG/Transperent/Icon38.png" id="5_irkh0"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_ju2ul")

[node name="Sprite2D" type="TextureRect" parent="."]
offset_right = 32.0
offset_bottom = 32.0
texture = ExtResource("1_j2rnm")

[node name="Label1" type="Label" parent="Sprite2D"]
offset_left = 18.0
offset_top = 15.0
offset_right = 58.0
offset_bottom = 39.0
text = "0"

[node name="Sprite2D2" type="TextureRect" parent="."]
offset_left = 35.0
offset_right = 67.0
offset_bottom = 32.0
texture = ExtResource("2_1t8kp")

[node name="Label2" type="Label" parent="Sprite2D2"]
offset_left = 16.0
offset_top = 15.0
offset_right = 56.0
offset_bottom = 39.0
text = "0"

[node name="Sprite2D3" type="TextureRect" parent="."]
offset_left = 69.0
offset_right = 101.0
offset_bottom = 32.0
texture = ExtResource("3_sphr1")

[node name="Label3" type="Label" parent="Sprite2D3"]
offset_left = 21.0
offset_top = 14.0
offset_right = 61.0
offset_bottom = 38.0
text = "0"

[node name="Sprite2D4" type="TextureRect" parent="."]
offset_left = 108.0
offset_right = 140.0
offset_bottom = 32.0
texture = ExtResource("4_vpstm")

[node name="Label4" type="Label" parent="Sprite2D4"]
offset_left = 16.0
offset_top = 14.0
offset_right = 56.0
offset_bottom = 38.0
text = "0"

[node name="Sprite2D5" type="TextureRect" parent="."]
offset_left = 142.0
offset_right = 174.0
offset_bottom = 32.0
texture = ExtResource("5_irkh0")

[node name="Label5" type="Label" parent="Sprite2D5"]
offset_left = 17.0
offset_top = 15.0
offset_right = 57.0
offset_bottom = 39.0
text = "0"
